--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 </head>
 <body class="bg-slate-950 text-slate-50 min-h-screen overflow-x-hidden">
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
